# api

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: balance.rs  error.rs  login.rs  main.rs  prelude.rs  receipt.rs  routes.rs  services.rs
src/handler/: cart.rs  cash.rs  commitment.rs  customer.rs  invoice.rs  login.rs  loyalty.rs  mod.rs  pricing.rs  procurement.rs  product.rs  purchase.rs  sku_image.rs  source.rs  stock.rs  upl.rs  user.rs
src/routes/: mod.rs  route_cart.rs  route_cash.rs  route_commitment.rs  route_customer.rs  route_invoice.rs  route_login.rs  route_loyalty.rs  route_pricing.rs  route_procurement.rs  route_product.rs  route_profile.rs  route_purchase.rs  route_sku.rs  route_sku_image.rs  route_source.rs  route_stock.rs  route_upl.rs  route_user.rs
