[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = "0.4"
log = "*"
pretty_env_logger = "*"
protos = {git = "https://github.com/gardenzilla/protos", tag = "0.4.6"}
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.3"
warp = "0.2"
