[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gzlib = "*"
jwt = "0.4"
log = "0.4.11"
pretty_env_logger = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1.0.1", features = ["full"]}
tonic = "0.3"
warp = "0.2.5"
